# fastapi-template-project

./: .gitignore  .pre-commit-config.yaml  README.md
code/: docker-compose.yml
code/backend/: .dockerignore  Dockerfile  main.py  models.py  pyproject.toml  settings.py
code/backend/migrations/: env.py
code/backend/migrations/versions/: c5fa63235e27_init_database.py
code/database/init/: schema.sql
tools/: dockerignore.py  pre-commit.py  pyproject.toml  sqlacodegen.py
tools/x/: alembic.sh  black.py
