[project]
name = "tools"
version = "0.1.0"
description = ""
authors = [
    {name = "VuVanNghia",email = "vuvannghia.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
