[project]
name = "backend"
version = "0.1.0"
description = "fastapi-template-project"
authors = [
    {name = "VuVanNghia",email = "vuvannghia.work@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.0,<10.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.121.1,<0.122.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pymysql (>=1.1.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
